[package]
name = "turns"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.46", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
log = "0.4.27"
env_logger = "0.11.5"
thiserror = "2.0.16"

[dev-dependencies]
tempfile = "3.21.0"
